<resources>

    ################################################# GLOBAL ##############################################
    #######################################################################################################

    <string name="app_name">PhotoGallery</string>
    <string name="action_settings">Settings</string>

    <string name="data_load_error">Error while loading data</string>
    <string name="data_load_success">Data load success</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="server_response_empty">Returned empty response</string>
    <string name="server_response_error">Response error</string>

    <string name="label">Label</string>
    <string name="empty">Empty</string>

    <string name="sh_web_service_config">ShWebServiceConfigData</string>



    ############################################## SETTINGS ACTIVITY ######################################
    #######################################################################################################


            ################################# ACTIVITY ###################################

            <string name="settings_filter_by_orientation_label">FILTER BY ORIENTATION</string>
            <string name="settings_filter_by_iso_label">FILTER BY ISO</string>
            <string name="settings_filter_by_maker_label">FILTER BY MAKER</string>
            <string name="settings_filter_by_flash_label">FILTER BY FLASH</string>
            <string name="settings_no_callback_implementation">No callback implementation in: </string>


            ################################# LAYOUT ###################################

            <string name="settings_activity_title">Details</string>
            <string name="settings_sort_options_label">Sort options</string>
            <string name="settings_filter_options_label">Filter options</string>


            <string name="settings_by_name_asc">by name asc</string>
            <string name="settings_by_name_desc">by name desc</string>
            <string name="settings_by_date_asc">by date asc</string>
            <string name="settings_by_date_desc">by date desc</string>
            <string name="settings_by_size_asc">by size asc</string>
            <string name="settings_by_size_desc">by size desc</string>
            <string name="settings_by_resolution_asc">by resolution asc</string>
            <string name="settings_by_resolution_desc">by resolution desc</string>

            <string name="settings_by_orientation">by Orientation</string>
            <string name="settings_by_iso">by ISO</string>
            <string name="settings_by_maker">by Maker</string>
            <string name="settings_by_flash">by Flash</string>


    ############################################## DETAILS ACTIVITY #######################################
    #######################################################################################################


            ################################# ACTIVITY ###################################

            <string name="details_date_label">Date</string>
            <string name="details_model_label">Model</string>
            <string name="details_resolution_label">Resolution</string>
            <string name="details_maker_label">Maker</string>
            <string name="details_orientation_label">Orientation</string>
            <string name="details_iso_label">ISO</string>
            <string name="details_size_label">Size</string>
            <string name="details_brightness_label">Brightness</string>
            <string name="details_shutter_speed_label">Shutter speed</string>
            <string name="details_focal_length_label">Focal length</string>

            <string name="details_photo_load_success">Photo details loaded successfully</string>
            <string name="details_exif_upload_success">Photo EXIF data updated successfully</string>
            <string name="details_exif_upload_failure">Update unsuccessful: Bad format of Exif Data</string>

            <string name="details_empty_photo_title">Empty photo title</string>
            <string name="details_update_image">Update image</string>



    ########################################### GALLERY ACTIVITY ##########################################
    #######################################################################################################


            ################################# ACTIVITY ###################################

            <string name="gallery_camera_error">Camera error occurred</string>
            <string name="gallery_photo_upload_success">Photo uploaded successfully</string>
            <string name="gallery_photo_upload_error">Error occurred. Photo uploaded unsuccessfully</string>
            <string name="gallery_photos_loaded_successfully">Photos loaded successfully</string>
            <string name="gallery_photo_refresh_success">Photo refreshed successfully</string>
            <string name="gallery_server_address_input">Set server IP address</string>


            ################################# LAYOUT ###################################

            <string name="gallery_empty_label">Empty gallery</string>





</resources>
